# web-rust-scheduler

./: Cargo.toml  README
src/: components.rs  data.rs  engine.rs  main.rs  map.rs  sections.rs  timeout.rs
src/components/: button.rs  style.rs  svgmap.rs
src/data/: input.rs  schema.rs
src/engine/: constants.rs  optimiser.rs  route.rs  scheduler.rs  travel.rs  value.rs  worker.rs
src/sections/: appbar.rs  infopanel.rs
static/: index.html  styles.css
